--- a/index.html
+++ b/index.html
@@ -16,39 +16,59 @@
 <body>
 
     <header>
-        <img src="/WF3-2020-main/img/bg_fruit.png" alt="fruits" id="fruits">
+        <img src="img/bg_fruit.png" alt="fruits" id="fruits">
 
 
-        <div class="navigation flex">
-            <nav>
-                <img class="logo1 flex" src="/WF3-2020-main/img/logo.png" alt="logo du site" id="logo" class="logo">
+        <nav class="navigation flex">
 
-                <div class="navtext">
-                    <p> Accueil </p>
-                    <p> A propos </p>
-                    <p> Boutique </p>
-                    <p> Pages </p>
-                    <p> Blog </p>
-                    <p> Contact </p>
-                </div>
+            <img class="logo1 flex" src="img/logo.png" alt="logo du site" id="logo" class="logo">
 
-                <div class="navicons">
-                    <ul>
-                        <li> <i class="fa-solid fa-magnifying-glass" id="cherche"> </i> </li>
-                        <li> <i class="fa-solid fa-user" id="user"> </i> </li>
-                        <li> <i class="fa-solid fa-heart" id="heart"> </i> </li>
-                        <li> <i class="fa-solid fa-cart-shopping" id="shop"> </i> </li>
-                    </ul>
-                </div>
+            <ul class="navtext">
+                <li> Accueil </li>
+                <li> A lirolios </li>
+                <li> Boutique </li>
+                <li> Pages </li>
+                <li> Blog </li>
+                <li> Contact </li>
+            </ul>
 
-        </div>
+            <div class="navicons">
+                <ul>
+                    <li> <i class="fa-solid fa-magnifying-glass" id="cherche"> </i> </li>
+                    <li> <i class="fa-solid fa-user" id="user"> </i> </li>
+                    <li> <i class="fa-solid fa-heart" id="heart"> </i> </li>
+                    <li> <i class="fa-solid fa-cart-shopping" id="shop"> </i> </li>
+                </ul>
+            </div>
+
         </nav>
 
 
+
+        <div class="textheader">
+            <span class="bienvenue">
+                <p>Bienvenue sur notre épicerie en ligne </p>
+            </span>
+            <h1> Boutique en ligne <br> de produits frais </p>
+            </h1>
+            <span class="click">
+                <p> votre click & collect près de chez vous </p>
+            </span>
+
+        </div>
+
+
+        <div class="course">
+            <h2 class="courses"> faire ses courses </h2>
+            <h2 class="informations"> En savoir plus </h2>
+           </div> 
     </header>
+    
 
 
 
+
+    grand contenair >grande section > div
 
     <main>
 
