--- a/index.html
+++ b/index.html
@@ -16,61 +16,210 @@
 <body>
 
     <header>
-        <img src="img/bg_fruit.png" alt="fruits" id="fruits">
-
+        <img src="/evaluation-1-css/img/banner.jpg" alt="fruits" id="banner">
 
         <nav class="navigation flex">
+            <img src="/evaluation-1-css/img/bg_fruit.png" alt="fruits" id="fruits1">
 
-            <img class="logo1 flex" src="img/logo.png" alt="logo du site" id="logo" class="logo">
+            <img class="logo1 flex" src="/evaluation-1-css/img/logo.png" alt="logo du site" id="logo" class="logo">
 
             <ul class="navtext">
-                <li> Accueil </li>
-                <li> A lirolios </li>
-                <li> Boutique </li>
-                <li> Pages </li>
-                <li> Blog </li>
-                <li> Contact </li>
+                <li> <a class="black" href="#"> Accueil </a> </li>
+                <li> <a class="black" href="#"> A propos </a> </li>
+                <li> <a class="black" href="#"> Boutique </a> </li>
+                <li> <a class="black" href="#"> Pages </a> </li>
+                <li> <a class="black" href="#"> Blog </a> </li>
+                <li> <a class="black" href="#"> Contact </a> </li>
             </ul>
 
             <div class="navicons">
                 <ul>
-                    <li> <i class="fa-solid fa-magnifying-glass" id="cherche"> </i> </li>
-                    <li> <i class="fa-solid fa-user" id="user"> </i> </li>
-                    <li> <i class="fa-solid fa-heart" id="heart"> </i> </li>
-                    <li> <i class="fa-solid fa-cart-shopping" id="shop"> </i> </li>
+                    <li> <a href="#"> <i class="fa-solid fa-magnifying-glass" id="cherche"> </i> </li></a>
+                    <li> <a href="#"><i class="fa-solid fa-user" id="user"> </i> </li></a>
+                    <li> <a href="#"><i class="fa-solid fa-heart" id="heart1"> </i> </li></a>
+                    <li> <a href="#"><i class="fa-solid fa-cart-shopping" id="shop"> </i> </li></a>
+                    <span class="badge"> 0 </span>
                 </ul>
             </div>
 
         </nav>
 
-
-
         <div class="textheader">
             <span class="bienvenue">
-                <p>Bienvenue sur notre épicerie en ligne </p>
+                <p> Bienvenue sur notre épicerie en ligne </p>
             </span>
             <h1> Boutique en ligne <br> de produits frais </p>
             </h1>
-            <span class="click">
-                <p> votre click & collect près de chez vous </p>
+            <span class="click"> votre click & collect près de chez vous
             </span>
 
+            <div class="course">
+                <h2 class="courses"> <a href="#"> Faire ses courses </a> </h2>
+                <h2 class="informations"> <a href="#"> En savoir plus </a> </h2>
+            </div>
         </div>
 
 
-        <div class="course">
-            <h2 class="courses"> faire ses courses </h2>
-            <h2 class="informations"> En savoir plus </h2>
-           </div> 
     </header>
-    
 
-
-
-
-    grand contenair >grande section > div
 
     <main>
 
+        <p>
+        <div class="containers1">
+
+            <div class="vegetables"> Trouvez vos <br> légumes <br> préférés <span> <br><br> <a href="#"> J'EN PROFITE ->
+                </span> </a>
+            </div>
+            <div class="drink"> Notre meilleure <br> sélection de <br> boissons <span> <br><br> <a href="#"> J'EN
+                        PROFITE ->
+                </span> </a> </div>
+            <div class="beauty"> Produits <br> de beauté et <br> santé <span> <br><br> <a href="#"> J'EN PROFITE ->
+                </span> </a></div>
+
+        </div>
+        </p>
+
+
+
+
+        <h2> Les plus populaires </h2>
+        <br>
+        <h3> Produits dans le vent </h3>
+
+        <section>
+            <div class="containers2">
+                <div class="boeuf">
+                    <img src="/evaluation-1-css/img/beef.png" alt="">
+
+                    <i class="fa-solid fa-heart" id="heart2"></i>
+                    <ul>
+                        <li> <i class="fa-solid fa-star" id="plein"> </i> </li>
+                        <li> <i class="fa-solid fa-star" id="plein"> </i> </li>
+                        <li> <i class="fa-solid fa-star" id="plein"> </i> </li>
+                        <li> <i class="fa-solid fa-star"> </i> </li>
+                        <li> <i class="fa-solid fa-star"> </i> </li>
+                    </ul>
+                    <h4> Steack de boeuf </h4>
+                    <span class="rayé"> 15€</span>
+                    <span class="green"> 12€ </span>
+                    <br> <span class="ajouter"> AJOUTER </span>
+
+                    <span class="hot"> Hot </span>
+
+                </div>
+
+                <div class="brocolis">
+                    <img src="/evaluation-1-css/img/broccoli.png" alt="">
+                    <i class="fa-solid fa-heart" id="heart3"></i>
+                    <ul>
+                        <li> <i class="fa-solid fa-star" id="plein"> </i> </li>
+                        <li> <i class="fa-solid fa-star" id="plein"> </i> </li>
+                        <li> <i class="fa-solid fa-star" id="plein"> </i> </li>
+                        <li> <i class="fa-solid fa-star"> </i> </li>
+                        <li> <i class="fa-solid fa-star"> </i> </li>
+                    </ul>
+                    <h4> Brocolis </h4>
+                    <span class="rayé"> 20€</span>
+                    <span class="green"> 15€ </span>
+                    <br> <span class="ajouter"> AJOUTER </span>
+
+                </div>
+
+                <div class="fraise">
+
+                    <img src="/evaluation-1-css/img/fraises.png" alt="">
+                    <i class="fa-solid fa-heart" id="heart4"></i>
+                    <ul>
+                        <li> <i class="fa-solid fa-star" id="plein"> </i> </li>
+                        <li> <i class="fa-solid fa-star" id="plein"> </i> </li>
+                        <li> <i class="fa-solid fa-star" id="plein"> </i> </li>
+                        <li> <i class="fa-solid fa-star"> </i> </li>
+                        <li> <i class="fa-solid fa-star"> </i> </li>
+                    </ul>
+                    <h4> Fraise </h4>
+                    <span class="rayé"> 30€</span>
+                    <span class="green"> 20€ </span>
+                    <br><span class="ajouter"> AJOUTER </span>
+
+                </div>
+
+            </div>
+
+
+
+
+            <div class="containers2">
+                <div class="miel">
+                    <img src="/evaluation-1-css/img/miel.png" alt="">
+                    <i class="fa-solid fa-heart" id="heart5"></i>
+                    <ul>
+                        <li> <i class="fa-solid fa-star" id="plein"> </i> </li>
+                        <li> <i class="fa-solid fa-star" id="plein"> </i> </li>
+                        <li> <i class="fa-solid fa-star" id="plein"> </i> </li>
+                        <li> <i class="fa-solid fa-star"> </i> </li>
+                        <li> <i class="fa-solid fa-star"> </i> </li>
+                    </ul>
+                    <h4> Miel frais </h4>
+                    <span class="rayé"> 15€</span>
+                    <span class="green"> 12€ </span>
+                    <br> <span class="ajouter"> AJOUTER </span>
+
+                </div>
+
+                <div class="lait">
+                    <img src="/evaluation-1-css/img/lait.png" alt="">
+                    <i class="fa-solid fa-heart" id="heart6"></i>
+                    <ul>
+                        <li> <i class="fa-solid fa-star" id="plein"> </i> </li>
+                        <li> <i class="fa-solid fa-star" id="plein"> </i> </li>
+                        <li> <i class="fa-solid fa-star" id="plein"> </i> </li>
+                        <li> <i class="fa-solid fa-star"> </i> </li>
+                        <li> <i class="fa-solid fa-star"> </i> </li>
+                    </ul>
+                    <h4> Lait du jour </h4>
+                    <span class="rayé"> 20€</span>
+                    <span class="green"> 15€ </span>
+                    <br> <span class="ajouter"> AJOUTER </span>
+
+                </div>
+
+                <div class="mangue">
+
+                    <img src="/evaluation-1-css/img/mangue.png" alt="">
+                    <i class="fa-solid fa-heart" id="heart7"></i>
+                    <ul>
+                        <li> <i class="fa-solid fa-star" id="plein"> </i> </li>
+                        <li> <i class="fa-solid fa-star" id="plein"> </i> </li>
+                        <li> <i class="fa-solid fa-star" id="plein"> </i> </li>
+                        <li> <i class="fa-solid fa-star"> </i> </li>
+                        <li> <i class="fa-solid fa-star"> </i> </li>
+                    </ul>
+                    <h4> Boisson à la mangue </h4>
+                    <span class="rayé"> 30€</span>
+                    <span class="green"> 20€ </span>
+                    <br> <span class="ajouter"> AJOUTER </span>
+
+                </div>
+
+            </div>
+
+        </section>
+
     </main>
+
+
+
+    <footer class="flex">
+        <a href="#">
+            <div class="promo"> <strong> 50% </strong> DE REDUCTION <br>
+                J'EN PROFITE > </div>
+
+
+            <div class="pop"> Les produits <br>les plus populaires
+        </a></div>
+
+        <img class="img" src="/evaluation-1-css/img/panier.jpg">
+
+    </footer>
 </body>
